1.2.8:
- Hide analytics preference when applicable

1.2.7: (First release on F-Droid)
- Fix crash on non-English devices

1.2.6:
- Source code has been publicly released at https://github.com/tslocum/MeditationAssistant
- Upgraded Google Play Services library to 8.1.0
- Now tracking which app market was used to install Meditation Assistant in sessions posted to MediNET

1.2.5:
- Added ability to restore all session preferences via presets (see "Preset settings" in the Settings window)
- Added custom labels to presets
- Moved "Full screen" and "Screen" preferences to the "Meditation" section

1.2.4:
- Fixed meditation streak not updating after inputting sessions manually
- Fixed daily reminder not displaying
- Potentially fixed session complete sound not playing

1.2.3:
- Fixed interval sound/vibration failing in some configurations
- Changed delay and interval preference summaries to show H:MM:SS values (rather than MM:SS)
(interval issue was a regression caused by an improperly placed setIntervalAlarm call)

1.2.2:
- Added "Longest session duration" and "Longest streak" to Progress window
- Added pause button to "session in progress" notification
- Renamed "Other session statistics" to "Sessions"
- Various optimizations have been implemented, which should be especially apparent on lower-end devices
- Renamed save button in add session dialog to add, ensured Message field in complete window and add session dialog don't take initial focus and show keyboard
- Improved SQLite DatabaseHandler, now using one instance and database reference across the entire application
- Changed delay preference to also allow up to 90 minutes
- Reordered "total time spent meditating" and "other session statistics"/"sessions"
- Max streak is now sent in x-Medinet-MaxStreak when connecting

1.2.1:
- Fixed crash when signing in to MediNET

1.2.0:
- Fixed delay/interval settings not maintaining their values
- Updated translations

1.1.9: