@@ -1,13 +1,8 @@
 package sh.ftp.rocketninelabs.meditationassistant;
 
 import android.app.Activity;
-import android.content.Intent;
 import android.os.Bundle;
-import android.support.wearable.view.DismissOverlayView;
 import android.support.wearable.view.WatchViewStub;
-import android.util.Log;
-import android.view.GestureDetector;
-import android.view.MotionEvent;
 import android.view.View;
 import android.widget.TimePicker;
 
