@@ -11,4 +11,5 @@
 
     <style name="NoSwipe" parent="@android:style/Theme.DeviceDefault">
         <item name="android:windowSwipeToDismiss">false</item>
-    </style></resources>
+    </style>
+</resources>
